Inserção do comando para puxar uma branch do remoto para o local

--- a/Codigos curso HTML 5 Guanabara.html
+++ b/Codigos curso HTML 5 Guanabara.html
@@ -15,7 +15,7 @@ Git checkout nomedabranch -> para mudra para a branch desejada.
 Git push origin nomedabranch -> inserir a branch no github
 Git push –u origin nomedabranch -> falar para o github q a branch local e a mesma da branch remota
 Git branch –r -> mostra as branchs remotas.
-Git branch –t design origin/nomedabranch  -> Fala para o servidor local o nome da branch correspondente no servidor remote para comecar a ser trackeada
+Git branch –t nomedabranchlocal origin/nomedabranchremota  -> Fala para o servidor local o nome da branch correspondente no servidor remote para comecar a ser trackeada
 Aula 7
 Estudo HTML 5 Guanabara -> Tags
 
