Nao sei o que mudei nesta versao

--- a/Codigos curso HTML 5 Guanabara.html
+++ b/Codigos curso HTML 5 Guanabara.html
@@ -16,6 +16,10 @@ Git push origin nomedabranch -> inserir a branch no github
 Git push –u origin nomedabranch -> falar para o github q a branch local e a mesma da branch remota
 Git branch –r -> mostra as branchs remotas.
 Git branch –t design origin/nomedabranch  -> Fala para o servidor local o nome da branch correspondente no servidor remote para comecar a ser trackeada
+git checkout -b nomedabranch -> para criar e entrar na branch criada
+git merge nomedabranch -> para buscar os commits de uma branch e juntar com a branch master ou branch selecionada
+git rebase (nome da branch de origem) (nomedabranch de destino) -> envia os commits de uma branch selecionada para outra
+git rebase --continue -> para continuar fazendo o rebase e apontar as diferencas no codigo
 Aula 7
 Estudo HTML 5 Guanabara -> Tags
 
