Fiz algumas alterações aqui no HTML mas nao lembro o que foi

--- a/Codigos curso HTML 5 Guanabara.html
+++ b/Codigos curso HTML 5 Guanabara.html
@@ -16,6 +16,14 @@ Git push origin nomedabranch -> inserir a branch no github
 Git push –u origin nomedabranch -> falar para o github q a branch local e a mesma da branch remota
 Git branch –r -> mostra as branchs remotas.
 Git branch –t nomedabranchlocal origin/nomedabranchremota  -> Fala para o servidor local o nome da branch correspondente no servidor remote para comecar a ser trackeada
+git checkout -b nomedabranch -> cria uma branch e automaticamente seleciona a mesma
+git merge nomedabranch -> traz as alterações da branch destacada para a branch atual
+
+
+
+
+
+
 Aula 7
 Estudo HTML 5 Guanabara -> Tags
 
