Inserido codigos de git reset no arquivo do curso de HTML5 prof guanabara

--- a/Codigos curso HTML 5 Guanabara.html
+++ b/Codigos curso HTML 5 Guanabara.html
@@ -20,7 +20,9 @@ git checkout -b nomedabranch -> para criar e entrar na branch criada
 git merge nomedabranch -> para buscar os commits de uma branch e juntar com a branch master ou branch selecionada
 git rebase (nome da branch de origem) (nomedabranch de destino) -> envia os commits de uma branch selecionada para outra
 git rebase --continue -> para continuar fazendo o rebase e apontar as diferencas no codigo
-
+git checkout nomedoarquivo -> volta o arquivo para o ultimo commit realizado na branch
+git reset HEAD nomedoarquivo -> para voltar o arquivo para um estado antes de ser commitado
+git reset codigodocommit -> comando utilizado para limpar o commit, nao deleta o arquivo, somente limpa o estado de commit
 
 Aula 7
 Estudo HTML 5 Guanabara -> Tags
