Inicio da Aula 12 de Links

--- a/Codigos curso HTML 5 Guanabara.html
+++ b/Codigos curso HTML 5 Guanabara.html
@@ -217,4 +217,4 @@ Iniciando lista com determinado numero:
 <ol type=”A” start=”3”>
 
 
-•	Teste do GITHub para edição de arquvos no word
+Aula 12 - links
