Alterações antes do carnaval

--- a/Codigos curso HTML 5 Guanabara.html
+++ b/Codigos curso HTML 5 Guanabara.html
@@ -179,7 +179,7 @@ Essa aula teve muito CSS.. Segue códigos abaixo:
 Ao criar o arquivo CSS, inserir o código abaixo para aceitar os caracteres utilizados no Brasil:
 @chatset “UTF-8”;
 Agora temos que referenciar o arquivo criado no arquivo html utilizando a tag abaixo:
-<link rel=”stylesheet” type=”text/css” href=”caminho do arquivo de css”/>
+<link rel=”stylesheet” href=”caminho do arquivo de css”/>
 
 Para fazer comentários em qualquer arquivo:
 Utilize  /* Comentario qualquer */
@@ -219,3 +219,25 @@ Iniciando lista com determinado numero:
 
 Aula 12 - links
 <a href="Link para outro site" target="_blank"> Nome do link </a>
+
+Aula 13 - Menu com CSS
+
+Duvida sobre diferença entre Id e class:
+
+/*
+ids must be unique where as class can be applied to many things. In CSS, ids look like #elementID and class elements look like .someClass
+
+In general, use id whenever you want to refer to a specific element and class when you have a number of things that are all alike. For instance, common id elements are things like header, footer, sidebar. Common class elements are things like highlight or external-link.
+
+It's a good idea to read up on the cascade and understand the precedence assigned to various selectors: http://www.w3.org/TR/CSS2/cascade.html
+
+The most basic precedence you should understand, however, is that id selectors take precedence over class selectors. If you had this:
+
+<p id="intro" class="foo">Hello!</p>
+and:
+
+#intro { color: red }
+.foo { color: blue }
+The text would be red because the id selector takes precedence over the class selector.
+
+*\
