--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="utf-8"/>
   <title> Site GoogleGlass </title>
-  <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+  <link rel="stylesheet" href="_css/estilo.css"/>
 
 </head>
 
@@ -19,7 +19,7 @@
 
       <img src="_imagens/glass-oculos-preto-peq.png"/>
 
-      <nav>
+      <nav id="menu">
         <h1>Menu Principal</h1>
       <ul>
         <li><a href="index.html">Home</a></li>
