Voltando a programar em HTML5

--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -19,7 +19,7 @@
 
       <img src="_imagens/glass-oculos-preto-peq.png"/>
 
-      Menu Principal
+      Menu Principal(Voltamos)
       - Home
       - Especificações
       - Fotos
